# sim-actual

./: .gitignore  AGENTS.md  CLAUDE.md  MAVLINKSPECS.md  Makefile  README.md  RL_RESEARCH_NOTES.md  SPEC.md  auto.py  controller.py  main.py  mavlink_rx.py  pyproject.toml  settings.json  setup.py  skills-lock.json  timesync.py  vision_rx.py
.github/: doc-update-prompt.md
aigp-round1-qualifier-main/aigp-round1-qualifier-main/: .gitignore  README.md  fly.py  pyproject.toml  relay.py
aigp-round1-qualifier-main/aigp-round1-qualifier-main/src/aigp_pilot/: __init__.py  control.py  course.py  imu_nav.py  mavlink_io.py  parsers.py  raceconfig.py  raceline.py
aigp-round1-qualifier-main/aigp-round1-qualifier-main/tests/: test_imports.py
docs/: Autonomy.md  HYBRID_CONTROL_SESSION.md  Instructions.md  JACOBIAN_DEMO.md  flight-automation.md  main-documentation.md  methodology.md  qualifier-playbook.md  research-links.md  round1_plan.md  round2_plan.md  vision-gate-navigation-plan.md  vq1-validation-report.md
rl/: __init__.py  bc_dataset.py  calibrate_cam.py  capture_gates.py  collect_sweep.py  control.py  course_path.py  dataset.py  demo_jacobian.py  deploy.py  diag_mav.py  diag_project.py  dynamics_id.py  ekf.py  env.py  fly2.py  fly2_course.py  fly_geometric.py  fly_jacobian.py  fly_odom.py  fly_servo.py  fly_vision.py  gate_tracker.py  gatenet.py  gatepose.py  geo_control.py  observation.py  perception.py  pnp.py  policy.py  raceline.py  rate_id.py  sim_interface.py  spec.py  synth_data.py  thrust_id.py  train_ppo.py  vision_fusion.py  vision_view.py
scripts/: doc-context.sh  doc-validate.sh  free-mavlink-port.ps1  free-mavlink-port.sh  mavlink_probe.py  package-lock.json  package.json  preflight.py  race_timing_probe.py  sim-ab.ps1  sim-eval.md  smoke_test.py  tracking_smoke.py  update-main-documentation.mjs  validate_tracking_log.py  vision_smoke.py
simulator/: auto_flight.py  camera_model.py  config.py  controller.py  corner_tracker.py  countdown_detector.py  course_path.py  diagnostics.py  display.py  flight_config.py  flight_control.py  flight_debug.py  flight_test.py  gate_adapter.py  gate_classifier.py  gate_detector.py  gate_estimator.py  gate_fusion.py  gate_kalman.py  gate_map_loader.py  gate_navigation.py  gate_pnp.py  gate_pose.py  gate_tracker.py  imu_kalman.py  manual_control.py  math_util.py  mavlink_masks.py  mavlink_rx.py  mavlink_tx.py  navigation.py  obstacle_detector.py  obstacle_tracker.py  pilot.py  pilot_profile.py  policy_runtime.py  preflight.py  race_monitor.py  racing_planner.py  rl_core.py  (+14 more)
tests/: test_auto_flight.py  test_camera_model.py  (+30 more)
(+16 files in other folders)
