[project]
name = "anduril-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pymavlink>=2.4.49",
    "scipy>=1.17.1",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "lefthook>=2.1.9",
    "ruff>=0.15.15",
]
